Changed Icons and Text Colors

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="section__text">
             <p class="section__text">Hello, I'm</p>
             <h1 class="title">Johnny Leyva</h1>
-            <p class="section__text__p2">Accounting Major at CSUDH!</p>
+            <p class="section__text__p2">An Accounting Major at CSUDH!</p>
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" 
@@ -145,8 +145,8 @@
                 
             </div>
         </div>
-                <section id="experience">
-                    <h2 class="title">Experience</h2>
+        <section id="experience">
+            <h2 class="title experience-title">Experience</h2>
             
                     <div class="jobs-container">
                         <div class="job1">
@@ -200,7 +200,6 @@
                 </div>
     </section>
     <section id="projects">
-        <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="color-container">
