New Margins for consistency.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <img src="./assets/job6.png" alt="Job 6" class="job-image">
                             <div>
                             <h3 class="job-title">Campaign Canvasser District #44</h3>
-                            <p class="job-description">Conducted outreach and engagement for the current 44th district representative: Nanette Diaz Barragan.</p>
+                            <p class="job-description">Conducted outreach for the current 44th district representative: Nanette Barragan.</p>
                             <p class="job-duration">Duration: (January 2016 - March 2016)</p>
                         </div>
                     </div>
