--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Desktop navigation -->
     <nav id="desktop-nav">
     <!-- Logo or Website Main Header-->
-        <div class="logo"><strong>Johnny Leyva</strong></div>
+        <div class="logo" onclick="window.location.reload();"><strong>Johnny Leyva</strong></div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about"><strong>About</strong></a></li> <!-- Each Section of the website will have its own if tag-->
