--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Link to media queries and to my MAIN style.css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" href="./assets/gato.ico" type="image/x-icon">
     
 </head>
 <body>
